--- a/style.css
+++ b/style.css
@@ -244,7 +244,7 @@ body {
   border-bottom-color: #000; }
 
 .reveal .controls .navigate-up.fragmented {
-  opacity: 0.3; }
+  opacity: 0.0; }
 
 .reveal .controls .navigate-down {
   left: 42px;
@@ -253,7 +253,7 @@ body {
   border-top-color: #000; }
 
 .reveal .controls .navigate-down.fragmented {
-  opacity: 0.3; }
+  opacity: 0.0; }
 
 /*********************************************
  * PROGRESS BAR
@@ -1507,8 +1507,8 @@ body {
 
 .reveal blockquote {
   display: block;
-  position: relative;
-  width: 70%;
+  position: top;
+  width: 90%;
   margin: 20px auto;
   padding: 5px;
   font-style: italic;
@@ -1541,7 +1541,7 @@ body {
   display: block;
   padding: 5px;
   overflow: auto;
-  max-height: 400px;
+  max-height: 600px;
   word-wrap: normal; }
 
 .reveal table {
